--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<optional>runtime</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
