--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 			<artifactId>h2</artifactId>
 			<optional>runtime</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
