--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,6 +3,6 @@ spring.profiles.active=test
 #configurar conexão banco h2 em memória
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=
